--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-dom": "^17.0.2",
     "react-download-link": "^2.3.0",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "^4.0.3",
+    "react-scroll": "^1.8.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
